# ai-test-agent

./: .gitignore  git_init_push.sh
ai-test-agent/: .coverage  .env  .env.example  Dockerfile  PET_ERROR_FIX.md  PET_FIX_README.md  README.md  app.py  coverage.xml  docker-compose.yml  fix_python_path.sh  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_pet.py  test_qwen_integration.py
ai-test-agent/assets/testing/: TEST_REPORT.md
ai-test-agent/backup/: requirements_20260423_104516.txt
ai-test-agent/data/knowledge/: entities.json
ai-test-agent/docs/: CHANGELOG.md  DEVELOPMENT_REPORT.md  TEST_REPORT.md  api_documentation.md  deployment_guide.md  user_manual.html
ai-test-agent/docs/architecture/: ARCHITECTURE.md  SIMPLE_ARCHITECTURE.md  TEXT_ARCHITECTURE.md
ai-test-agent/docs/database/: DATABASE_DESIGN.md
ai-test-agent/scripts/: README.md  create_test_user.py  process_banking_requirements.py  process_requirements.py
ai-test-agent/scripts/config/: service.conf
ai-test-agent/src/ai_loop/: __init__.py  engine.py
ai-test-agent/src/api/: routes.py
ai-test-agent/src/auth/: audit.py  auth_service.py  database.py  models.py
ai-test-agent/src/clarification_generator/: __init__.py  clarification_generator.py
ai-test-agent/src/coding_task_generator/: __init__.py  coding_task_generator.py
ai-test-agent/src/common/: ai_service.py  document_exporter.py  enhanced_ai_service.py
ai-test-agent/tests/: test_adapters.py  test_ai_loop_engine.py  test_ai_loop_integration.py  test_compatibility.py  test_knowledge_base.py  test_performance.py
(+454 files in other folders)
